@@ -1,3 +1,7 @@
+2007-07-10
+
+  Added support for X-Twitter-* HTTP headers
+
 2007-06-13
 
   Released 0.4.
